Fix web player overflow

--- a/web/static/css/player.css
+++ b/web/static/css/player.css
@@ -2,7 +2,7 @@
 video {
   display: block;
   flex-grow: 1;
-  width: 100%;
+  max-width: 100%;
 
   /* Black borders around video */
   background-color: #000;
